dsme (0.62.0) unstable; urgency=low

  [Matias Muhonen]
  * Don't link the dsme binary to unused dependencies (Fixes: NB#266894)
  * Check for socket connect errors in dsmetool (Fixes: NB#269307)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Tue, 28 Jun 2011 10:38:03 +0000

dsme (0.61.58) unstable; urgency=low

  [Matias Muhonen]
  * Fix a race between waitfordsme and dsmesock/accept_client (Fixes: NB#259843)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Tue, 14 Jun 2011 08:58:04 +0000

dsme (0.61.57) unstable; urgency=low

  * Fixes: NB#260776 - Scheduled synchronization NOT working with all accounts if device time set to past 
    - use clock_gettime(clock_gettime(CLOCK_MONOTONIC, ...) instead of time()

 -- Raimo Vuonnala <raimo.vuonnala@nokia.com>  Wed, 08 Jun 2011 10:15:45 +0300

dsme (0.61.56) unstable; urgency=low

  [Antti Virtanen]
  * Increased CHARGER_DISCONNECT_TIMEOUT to 15 sec.

  [Jyrki Hämäläinen]
  * Implemented cleaner exit handling
  * Empty log buffer correctly when exiting the process

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 26 May 2011 09:24:50 +0000

dsme (0.61.55) unstable; urgency=low

  [Antti Virtanen]
  * Fixed memory leaks from validator netlink message handling.
  * Added dependency to upstart and requesting dsme::DeviceStateControl for /sbin/init.

  [Matias Muhonen]
  * Allow dsmesock usage only with the dsme::DeviceStateControl credential (Fixes: NB#255241)

  [Jyrki Hämäläinen]
  * Cleanup WD kicking in the state module
  * Fix the testdriver

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Wed, 11 May 2011 14:37:27 +0300

dsme (0.61.54) unstable; urgency=low

  * Don't malf on no reference hash (Fixes: NB#253870)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Wed, 11 May 2011 07:03:42 +0000

dsme (0.61.53) unstable; urgency=low

  *  Fixes: NB#249323 - Need to add feature to system heartbeat to synchronize multiple clients in fixed time 
